@@ -77,31 +77,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<encoding>${project.build.sourceEncoding}</encoding>
-					<source>17</source>
-					<target>17</target>
-					<!--debug>true</debug>-->
-					<compilerArgs>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=dawdler.server</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.perf=dawdler.server</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=dawdler.boot.server</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.misc=dawdler.boot.server</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=dawdler.util</arg>
-					</compilerArgs>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 </project>
