@@ -31,12 +31,6 @@
 			<groupId>dawdler</groupId>
 			<artifactId>dawdler-client-plug-rabbitmq</artifactId>
 		</dependency>
-		<dependency>
-			  <groupId>test_jar</groupId>
-  <artifactId>test_jar</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -62,29 +56,6 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<encoding>${project.build.sourceEncoding}</encoding>
-					<source>17</source>
-					<target>17</target>
-					<!--debug>true</debug>-->
-					<compilerArgs>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=dawdler.util</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=order.web.api</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.misc=order.web.api</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.perf=order.web.api</arg>
-					</compilerArgs>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
